# usdv_sol

./: .env  .env.example  .gitignore  Anchor.toml  README.md  my_program-keypair.json  package-lock.json  package.json  tsconfig.json
programs/usdv_bridge/: Cargo.toml
programs/usdv_bridge/src/: context.rs  error.rs  lib.rs  message.rs  processor.rs  state.rs
programs/usdv_bridge/src/state/: config.rs  foreign_emitter.rs  mod.rs  received.rs
tests/: usdv_bridge.ts
tests/helpers/: constants.ts  functions.ts
ts_sdk/: program.ts
ts_sdk/accounts/: config.ts  foreignEmitter.ts  received.ts  wormhole.ts
ts_sdk/instructions/: index.ts  initialize.ts  receiveMessage.ts  registerEmitter.ts  sendMessage.ts
