[package]
name = "usdv_bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdv_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
wormhole-anchor-sdk = { version = "0.29.0-alpha.1", features = ["solana-devnet"] }

